Add actions to the binding.
Signed-off-by: jossuar <georgios.moutsos@gmail.com>